Started work on file permission;not yet functioning on my device but should for emulators

--- a/MuZeCode/app/src/main/res/values/strings.xml
+++ b/MuZeCode/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MuZeCode</string>
+    <string name="perm_granted">You already have file access!</string>
 </resources>
