--- a/MuZeCode/app/src/main/res/values/strings.xml
+++ b/MuZeCode/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MuZe</string>
+
+    <string name="media_notification_channel">MediaNotification</string>
+    <string name="media_notification_channel_description">MediaNotification</string>
 </resources>
